--- a/admin/faculty.html
+++ b/admin/faculty.html
@@ -170,7 +170,7 @@
                                     <tr>
                                         <td>001</td>
                                         <td>
-                                            <img src="/image/sir aldrin.png" alt="Faculty" class="faculty-img me-2">
+                                            <img src="/assets/img/sir aldrin.png" alt="Faculty" class="faculty-img me-2">
                                             Prof. Aldrin Rey
                                         </td>
                                         <td>Information System</td>
@@ -186,7 +186,7 @@
                                     <tr>
                                         <td>002</td>
                                         <td>
-                                            <img src="/image/sir dale.png" alt="Faculty" class="faculty-img me-2">
+                                            <img src="/assets/img/sir dale.png" alt="Faculty" class="faculty-img me-2">
                                             Prof. Dale Ogbac
                                         </td>
                                         <td>Information System</td>
@@ -202,7 +202,7 @@
                                     <tr>
                                         <td>003</td>
                                         <td>
-                                            <img src="/image/SIR ALFRED.png" alt="Faculty" class="faculty-img me-2">
+                                            <img src="/assets/img/sir alfred.png" alt="Faculty" class="faculty-img me-2">
                                             Prof. Alfred Flores
                                         </td>
                                         <td>Information System</td>
@@ -220,7 +220,7 @@
                                     <tr>
                                         <td>004</td>
                                         <td>
-                                            <img src="/image/doc randel.jpg" alt="Faculty" class="faculty-img me-2">
+                                            <img src="/assets/img/doc randel.jpg" alt="Faculty" class="faculty-img me-2">
                                             Dr. Randell Reginio
                                         </td>
                                         <td>Information System</td>
