--- a/admin/studentportal.html
+++ b/admin/studentportal.html
@@ -150,7 +150,7 @@
                         <div class="card-body">
                             <div class="row align-items-center">
                                 <div class="col-md-2 text-center">
-                                    <img src="/image/dad's.jfif " 
+                                    <img src="/assets/img/dad's.jfif" 
                                          alt="Student Photo" class="student-img mb-2">
                                 </div>
                                 <div class="col-md-10">
