--- a/admin/students.html
+++ b/admin/students.html
@@ -175,7 +175,7 @@
                                     <tr>
                                         <td>23S0091</td>
                                         <td>
-                                            <img src="/image/dad's.jfif" alt="Student" class="student-img me-2">
+                                            <img src="/assets/img/dad's.jfif" alt="Student" class="student-img me-2">
                                             Dad's Charlotte Privado
                                         </td>
                                         <td>BS Information System</td>
@@ -191,7 +191,7 @@
                                     <tr>
                                         <td>23S0090</td>
                                         <td>
-                                            <img src="/image/ruby.jfif" alt="Student" class="student-img me-2">
+                                            <img src="/assets/img/ruby.jfif" alt="Student" class="student-img me-2">
                                             Ruby Charlene Perilla
                                         </td>
                                         <td>BS Information System</td>
@@ -207,7 +207,7 @@
                                     <tr>
                                         <td>23S0019</td>
                                         <td>
-                                            <img src="/image/cass.jpeg" alt="Student" class="student-img me-2">
+                                            <img src="/assets/img/cass.jpeg" alt="Student" class="student-img me-2">
                                            Cassandra Marie Conde
                                         </td>
                                         <td>BS Information System</td>
@@ -223,7 +223,7 @@
                                     <tr>
                                         <td>23S0094</td>
                                         <td>
-                                            <img src="/image/Sandara.jpeg" alt="Student" class="student-img me-2">
+                                            <img src="/assets/img/Sandara.jpeg" alt="Student" class="student-img me-2">
                                             Sandara Pergis
                                         </td>
                                         <td>BS Information System</td>
@@ -239,7 +239,7 @@
                                      <tr>
                                         <td>23S0095</td>
                                         <td>
-                                            <img src="/image/suzette.jfif" alt="Student" class="student-img me-2">
+                                            <img src="/assets/img/suzette.jfif" alt="Student" class="student-img me-2">
                                            Ma.Suzette Ericka Posas
                                         </td>
                                         <td>BS Information System</td>
